--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,6 +1,6 @@
 {
   "layer": "top",
-  "position": "right",
+  "position": "left",
   "output": ["*"],
   "exclusive": true,
   "passthrough": false,
