--- a/alacritty/.config/alacritty/theme.toml
+++ b/alacritty/.config/alacritty/theme.toml
@@ -1,32 +1,48 @@
 
 [colors.primary]
-foreground = "#000000"
-background = "#fdf6e3"
+foreground = "#ebdbb2"
+background = "#1d2021"
 
 [colors.cursor]
-text = "#fdf6e3"
-cursor = "#003DA5"
+text = "#1d2021"
+cursor = "#ebdbb2"
 
 [colors.selection]
-text = "#000000"
-background = "#e6dfd0"
+text = "#1d2021"
+background = "#ebdbb2"
 
 [colors.normal]
-black = "#4A4A4A"
-red = "#CC0000"
-green = "#228B22"
-yellow = "#e6c619"
-blue = "#003DA5"
-magenta = "#AA0066"
-cyan = "#0066AA"
-white = "#000000"
+black = "#1d2021"
+red = "#cc241d"
+green = "#98971a"
+yellow = "#d79921"
+blue = "#458588"
+magenta = "#b16286"
+cyan = "#689d6a"
+white = "#a89984"
 
 [colors.bright]
-black = "#6A6A6A"
-red = "#FF0000"
-green = "#32CD32"
-yellow = "#FFED4E"
-blue = "#0055FF"
-magenta = "#FF0099"
-cyan = "#00AAFF"
-white = "#000000"
+black = "#928374"
+red = "#fb4934"
+green = "#b8bb26"
+yellow = "#fabd2f"
+blue = "#83a598"
+magenta = "#d3869b"
+cyan = "#8ec07c"
+white = "#ebdbb2"
+
+[font.normal]
+family = "Miracode"
+style = "Regular"
+
+[font.bold]
+family = "Miracode"
+style = "Bold"
+
+[font.italic]
+family = "Miracode"
+style = "Italic"
+
+[font.bold_italic]
+family = "Miracode"
+style = "Bold Italic"
