--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,38 +1,47 @@
 
-# $GTK_THEME = Frosted-Glass
-$GTK_THEME = Orchis-Light
-$ICON_THEME = Tela-circle-blue
-$COLOR_SCHEME = prefer-light
-$CURSOR_THEME = GoogleDot-Blue
-$NVIM_SCHEME = solarized
-$NVIM_BACKGROUND = light
-$NVIM_TRANSPARENCY = false
+$GTK_THEME=Pixel-Dream
+$ICON_THEME=pixelitos-dark
+$COLOR_SCHEME=prefer-dark
+$CURSOR_SIZE=25
+# $FONT=Monocraft Nerd Font Book
+$CURSOR_THEME=pixelfun2
+$FONT=More Perfect DOS VGA
+$NVIM_SCHEME=gruvbox
+$NVIM_VARIANT=dark-hard
+
 
 general {
-  gaps_in = 3
-  gaps_out = 6
-  border_size = 2
-  layout = dwindle
-  resize_on_border = true
+    gaps_in = 3
+    gaps_out = 6
+    border_size = 2
+    col.active_border = rgba(d79921ff)
+    col.inactive_border = rgba(665c54cc)
+    layout = dwindle
+    resize_on_border = true
 }
 
 group {
+    col.border_active = rgba(d79921ff)
+    col.border_inactive = rgba(665c54cc)
+    col.border_locked_active = rgba(d79921ff)
+    col.border_locked_inactive = rgba(665c54cc)
 }
 
 decoration {
-  rounding = 4
-  shadow {
-    enabled = false
-  }
+    rounding = 0
 
-  blur {
-    enabled = yes
-    size = 4
-    passes = 4
-    new_optimizations = on
-    ignore_opacity = on
-    xray = false
-  }
+    blur {
+        enabled = yes
+        size = 6
+        passes = 3
+        new_optimizations = on
+        ignore_opacity = on
+        xray = false
+    }
+
+    shadow {
+        enabled = false
+    }
 }
 
 layerrule = blur,waybar
