--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,52 +1,55 @@
 
-foreground              #000000
-background              #fdf6e3
-selection_foreground    #FFFFFF
-selection_background    #005CAB
-cursor                  #E1261C
-cursor_text_color       #FFFFFF
+# pixel font
+# font_family      Monocraft Nerd Font
 
-active_tab_foreground   #003DA5
-active_tab_background   #fdf6e3
-inactive_tab_foreground #839496
-inactive_tab_background #eee8d5
-tab_bar_background      #eee8d5
+# alternative font if you want more visibility
+font_family     Miracode
+# font_family       More Perfect DOS VGA
 
-color0                  #666666
-color8                  #839496
+background #1d2021
+foreground #d4be98
 
-color1                  #D0021B
-color9                  #E1261C
+selection_background #d4be98
+selection_foreground #1d2021
 
-color2                  #00A651
-color10                 #00C853
+cursor #a89984
+cursor_text_color background
 
-color3                  #E85D00
-color11                 #FF8000
+active_tab_background #1d2021
+active_tab_foreground #98971a
+active_tab_font_style bold
+inactive_tab_background #1d2021
+inactive_tab_foreground #665c54
+inactive_tab_font_style normal
 
-color4                  #005CAB
-color12                 #0066CC
+# Black
+color0 #665c54
+color8 #928374
 
-color5                  #D0021B
-color13                 #E1261C
+# Red
+color1 #ea6962
+color9 #ea6962
 
-color6                  #005CAB
-color14                 #0066CC
+# Green
+color2 #a9b665
+color10 #a9b665
 
-color7                  #000000
-color15                 #A4A4A4
+# Yellow
+color3 #e78a4e
+color11 #d8a657
 
-# Proper yellow
-# Default Bauhaus use orange for readibility
+# Blue
+color4 #7daea3
+color12 #7daea3
 
-# color3                  #FFC425
-# color11                 #FFD500
+# Magenta
+color5 #d3869b
+color13 #d3869b
 
-# Proper cyan and magenta 
-# Default Bauhaus use primary blue and red
+# Cyan
+color6 #89b482
+color14 #89b482
 
-# color5                  #9B26AF
-# color13                 #B833CC
-
-# color6                  #00A6A6
-# color14                 #00D4D4
+# White
+color7 #d4be98
+color15 #d4be98
