--- a/tmux/.config/tmux/theme.conf
+++ b/tmux/.config/tmux/theme.conf
@@ -1,52 +1,52 @@
 
-# Tmux theme for Bauhaus 80
+# Tmux theme for Pixel Dream
 # Auto-generated from kitty.theme colors
 
 # ============================================================================
 # Standard 16 color palette
 # ============================================================================
-set -g @color0 "#666666"
-set -g @color1 "#D0021B"
-set -g @color2 "#00A651"
-set -g @color3 "#E85D00"
-set -g @color4 "#005CAB"
-set -g @color5 "#D0021B"
-set -g @color6 "#005CAB"
-set -g @color7 "#000000"
-set -g @color8 "#839496"
-set -g @color9 "#E1261C"
-set -g @color10 "#00C853"
-set -g @color11 "#FF8000"
-set -g @color12 "#0066CC"
-set -g @color13 "#E1261C"
-set -g @color14 "#0066CC"
-set -g @color15 "#A4A4A4"
+set -g @color0 "#665c54"
+set -g @color1 "#cc241d"
+set -g @color2 "#98971a"
+set -g @color3 "#d79921"
+set -g @color4 "#458588"
+set -g @color5 "#b16286"
+set -g @color6 "#689d6a"
+set -g @color7 "#a89984"
+set -g @color8 "#7c6f64"
+set -g @color9 "#fb4934"
+set -g @color10 "#b8bb26"
+set -g @color11 "#fabd2f"
+set -g @color12 "#83a598"
+set -g @color13 "#d3869b"
+set -g @color14 "#8ec07c"
+set -g @color15 "#bdae93"
 
 # ============================================================================
 # Semantic color aliases
 # ============================================================================
-set -g @theme_bg "#fdf6e3"
-set -g @theme_fg "#000000"
-set -g @theme_accent "#005CAB"
-set -g @theme_gray "#839496"
-set -g @theme_highlight "#005CAB"
-set -g @theme_red "#D0021B"
-set -g @theme_brightred "#E1261C"
-set -g @theme_green "#00A651"
-set -g @theme_yellow "#E85D00"
-set -g @theme_blue "#005CAB"
-set -g @theme_magenta "#D0021B"
-set -g @theme_cyan "#005CAB"
+set -g @theme_bg "#1d2021"
+set -g @theme_fg "#ebdbb2"
+set -g @theme_accent "#458588"
+set -g @theme_gray "#7c6f64"
+set -g @theme_highlight "#d3869b"
+set -g @theme_red "#cc241d"
+set -g @theme_brightred "#fb4934"
+set -g @theme_green "#98971a"
+set -g @theme_yellow "#d79921"
+set -g @theme_blue "#458588"
+set -g @theme_magenta "#b16286"
+set -g @theme_cyan "#689d6a"
 
 # ============================================================================
 # Tmux color settings
 # ============================================================================
-set -g status-style "bg=#fdf6e3,fg=#000000"
-set -g message-style "bg=#fdf6e3,fg=#005CAB"
-set -g message-command-style "bg=#fdf6e3,fg=#005CAB"
-set -g pane-border-style "fg=#839496"
-set -g pane-active-border-style "fg=#005CAB"
-set -g window-status-style "fg=#839496"
-set -g window-status-current-style "fg=#005CAB,bold"
-set -g mode-style "bg=#005CAB,fg=#fdf6e3"
-set -g clock-mode-colour "#005CAB"
+set -g status-style "bg=#1d2021,fg=#ebdbb2"
+set -g message-style "bg=#1d2021,fg=#458588"
+set -g message-command-style "bg=#1d2021,fg=#458588"
+set -g pane-border-style "fg=#7c6f64"
+set -g pane-active-border-style "fg=#d3869b"
+set -g window-status-style "fg=#7c6f64"
+set -g window-status-current-style "fg=#458588,bold"
+set -g mode-style "bg=#458588,fg=#1d2021"
+set -g clock-mode-colour "#458588"
