tweak Paranoid Sweet

--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,55 +1,41 @@
 
-# pixel font
-# font_family      Monocraft Nerd Font
+# kitty theme: Sweet
+# Based on: https://github.com/EliverLara/Sweet/blob/nova/kde/konsole/Sweet.colorscheme
 
-# alternative font if you want more visibility
-font_family     Miracode
-# font_family       More Perfect DOS VGA
+background #161925
+foreground #c3c7c8
+selection_background #bd93f9
+selection_foreground #161925
+cursor #c3c7c8
 
-background #1d2021
-foreground #d4be98
+color0 #697388
+color8 #697388
+color1 #ed254e
+color9 #ed254e
+color2 #71f79f
+color10 #71f79f
+color3 #f9dc5c
+color11 #f9dc5c
+color4 #7cb7ff
+color12 #7cb7ff
+color5 #c74ded
+color13 #c74ded
+color6 #00c1e4
+color14 #00c1e4
+color7 #dcdfe4
+color15 #dcdfe4
 
-selection_background #d4be98
-selection_foreground #1d2021
+# Tab bar colors
+active_tab_background #282a36
+active_tab_foreground #bd93f9
+inactive_tab_background #282a36
+inactive_tab_foreground #6272a4
+tab_bar_background #282a36
 
-cursor #a89984
-cursor_text_color background
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
 
-active_tab_background #1d2021
-active_tab_foreground #98971a
-active_tab_font_style bold
-inactive_tab_background #1d2021
-inactive_tab_foreground #665c54
-inactive_tab_font_style normal
-
-# Black
-color0 #665c54
-color8 #928374
-
-# Red
-color1 #ea6962
-color9 #ea6962
-
-# Green
-color2 #a9b665
-color10 #a9b665
-
-# Yellow
-color3 #e78a4e
-color11 #d8a657
-
-# Blue
-color4 #7daea3
-color12 #7daea3
-
-# Magenta
-color5 #d3869b
-color13 #d3869b
-
-# Cyan
-color6 #89b482
-color14 #89b482
-
-# White
-color7 #d4be98
-color15 #d4be98
+# Splits/Windows
+active_border_color #f8f8f2
+inactive_border_color #6272a4
