--- a/alacritty/.config/alacritty/theme.toml
+++ b/alacritty/.config/alacritty/theme.toml
@@ -1,48 +1,32 @@
 
 [colors.primary]
-foreground = "#ebdbb2"
-background = "#1d2021"
+foreground = "#FFFFFF"
+background = "#131311"
 
 [colors.cursor]
-text = "#1d2021"
-cursor = "#ebdbb2"
+text = "#FFFFFF"
+cursor = "#8B6F56"
 
 [colors.selection]
-text = "#1d2021"
-background = "#ebdbb2"
+text = "#131311"
+background = "#FFFFFF"
 
 [colors.normal]
-black = "#1d2021"
-red = "#cc241d"
-green = "#98971a"
-yellow = "#d79921"
-blue = "#458588"
-magenta = "#b16286"
-cyan = "#689d6a"
-white = "#a89984"
+black = "#525229"
+red = "#FFE4CC"
+green = "#FFE1CC"
+yellow = "#FFE1CC"
+blue = "#E6E69A"
+magenta = "#E6B99A"
+cyan = "#E6B99A"
+white = "#FFE4CC"
 
 [colors.bright]
-black = "#928374"
-red = "#fb4934"
-green = "#b8bb26"
-yellow = "#fabd2f"
-blue = "#83a598"
-magenta = "#d3869b"
-cyan = "#8ec07c"
-white = "#ebdbb2"
-
-[font.normal]
-family = "Miracode"
-style = "Regular"
-
-[font.bold]
-family = "Miracode"
-style = "Bold"
-
-[font.italic]
-family = "Miracode"
-style = "Italic"
-
-[font.bold_italic]
-family = "Miracode"
-style = "Bold Italic"
+black = "#8F8F57"
+red = "#F0CBAA"
+green = "#F0C7AA"
+yellow = "#F0C7AA"
+blue = "#E6E69A"
+magenta = "#E6B99A"
+cyan = "#E6B99A"
+white = "#F0CBAA"
