--- a/cava/.config/cava/config
+++ b/cava/.config/cava/config
@@ -5,12 +5,12 @@ source = /tmp/mpd.fifo
 [color]
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#728567'
-gradient_color_2 = '#848A72'
-gradient_color_3 = '#5D8E9E'
-gradient_color_4 = '#9CADAF'
-gradient_color_5 = '#BFBCBF'
-gradient_color_6 = '#97C2B6'
-gradient_color_7 = '#BFBCBF'
-gradient_color_8 = '#97C2B6'
+gradient_color_1 = '#514962'
+gradient_color_2 = '#995368'
+gradient_color_3 = '#C48B77'
+gradient_color_4 = '#61318A'
+gradient_color_5 = '#64649A'
+gradient_color_6 = '#954594'
+gradient_color_7 = '#64649A'
+gradient_color_8 = '#954594'
 
