--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,34 +1,32 @@
 
-$GTK_THEME=Pixel-Dream
-$ICON_THEME=pixelitos-dark
-$COLOR_SCHEME=prefer-dark
-$CURSOR_SIZE=25
-# $FONT=Monocraft Nerd Font Book
-$CURSOR_THEME=pixelfun2
-$FONT=More Perfect DOS VGA
-$NVIM_SCHEME=gruvbox
-$NVIM_VARIANT=dark-hard
+$GTK_THEME = Sweet-Dark
+$ICON_THEME = Beauty-yellow-dark
+$COLOR_SCHEME = prefer-dark
+$CURSOR_THEME = Colloid-Dracula-cursors-dark
+$CURSOR_SIZE = 30
+$NVIM_SCHEME = dracula
+$CODE_THEME = Modern Purple Theme Dark
 
 
 general {
     gaps_in = 3
     gaps_out = 6
     border_size = 2
-    col.active_border = rgba(d79921ff)
-    col.inactive_border = rgba(665c54cc)
+    col.active_border = rgba(c74dedff)
+    col.inactive_border = rgba(00c1e4cc)
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(d79921ff)
-    col.border_inactive = rgba(665c54cc)
-    col.border_locked_active = rgba(d79921ff)
-    col.border_locked_inactive = rgba(665c54cc)
+    col.border_active = rgba(c74dedff)
+    col.border_inactive = rgba(00c1e4cc)
+    col.border_locked_active = rgba(c74dedff)
+    col.border_locked_inactive = rgba(00c1e4cc)
 }
 
 decoration {
-    rounding = 0
+    rounding = 3
 
     blur {
         enabled = yes
@@ -43,5 +41,3 @@ decoration {
         enabled = false
     }
 }
-
-layerrule = blur,waybar
