fix waybar loading

--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,50 +1,66 @@
 
-foreground               #e0def4
-background               #191724
-selection_foreground     #e0def4
-selection_background     #403d52
+# Basic colors
+foreground #c9b9a8
+background #121212
+selection_foreground #1a1815
+selection_background #c9b9a8
 
-cursor                   #524f67
-cursor_text_color        #e0def4
+# Cursor colors
+cursor #d4b896
+cursor_text_color #1a1815
 
-url_color                #c4a7e7
+# URL underline color when hovering with mouse
+url_color #7fa09e
 
-active_tab_foreground    #e0def4
-active_tab_background    #26233a
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #191724
+# Kitty window border colors
+active_border_color #d4896b
+inactive_border_color #3d3935
 
-active_border_color      #31748f
-inactive_border_color    #403d52
+# Tab bar colors
+active_tab_foreground #c15959
+active_tab_background #1a1815
+inactive_tab_foreground #8a7f76
+inactive_tab_background #2b2622
+tab_bar_background #2b2622
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1a1815
+mark1_background #d4896b
+mark2_foreground #1a1815
+mark2_background #7fa09e
+mark3_foreground #1a1815
+mark3_background #b5927d
+
+# The 16 terminal colors
 
 # black
-color0   #26233a
-color8   #6e6a86
+color0 #1a1815
+color8 #4a4541
 
-# red
-color1   #eb6f92
-color9   #eb6f92
+# red (ember red)
+color1 #c15959
+color9 #d47065
 
-# green
-color2   #31748f
-color10  #31748f
+# green (orange/amber substitute)
+color2 #d4896b
+color10 #e69b7f
 
-# yellow
-color3   #f6c177
-color11  #f6c177
+# yellow (orange golden)
+color3 #d9a364
+color11 #e6b373
 
 # blue
-color4   #9ccfd8
-color12  #9ccfd8
+color4 #7293a8
+color12 #86a8bd
 
-# magenta
-color5   #c4a7e7
-color13  #c4a7e7
+# magenta (red ashen)
+color5 #b5746b
+color13 #c98b82
 
-# cyan
-color6   #ebbcba
-color14  #ebbcba
+# cyan (teal)
+color6 #7fa09e
+color14 #93b4b2
 
-# white
-color7   #e0def4
-color15  #e0def4
+# white (grayscale)
+color7 #c9b9a8
+color15 #dfd2c4
