--- a/tmux/.config/tmux/theme.conf
+++ b/tmux/.config/tmux/theme.conf
@@ -1,52 +1,52 @@
 
-# Tmux theme for Solarized Dark
+# Tmux theme for Red Stone
 # Auto-generated from kitty.theme colors
 
 # ============================================================================
 # Standard 16 color palette
 # ============================================================================
-set -g @color0 "#002731"
-set -g @color1 "#d01b24"
-set -g @color2 "#6bbe6c"
-set -g @color3 "#a57705"
-set -g @color4 "#2075c7"
-set -g @color5 "#c61b6e"
-set -g @color6 "#259185"
-set -g @color7 "#e9e2cb"
-set -g @color8 "#006388"
-set -g @color9 "#f4153b"
-set -g @color10 "#50ee84"
-set -g @color11 "#b17e28"
-set -g @color12 "#178dc7"
-set -g @color13 "#e14d8e"
-set -g @color14 "#00b29e"
-set -g @color15 "#fcf4dc"
+set -g @color0 "#1a1815"
+set -g @color1 "#c15959"
+set -g @color2 "#d4896b"
+set -g @color3 "#d9a364"
+set -g @color4 "#7293a8"
+set -g @color5 "#b5746b"
+set -g @color6 "#7fa09e"
+set -g @color7 "#c9b9a8"
+set -g @color8 "#4a4541"
+set -g @color9 "#d47065"
+set -g @color10 "#e69b7f"
+set -g @color11 "#e6b373"
+set -g @color12 "#86a8bd"
+set -g @color13 "#c98b82"
+set -g @color14 "#93b4b2"
+set -g @color15 "#dfd2c4"
 
 # ============================================================================
 # Semantic color aliases
 # ============================================================================
-set -g @theme_bg "#002b36"
-set -g @theme_fg "#9bc1c2"
-set -g @theme_accent "#2075c7"
-set -g @theme_gray "#006388"
-set -g @theme_highlight "#2075c7"
-set -g @theme_red "#d01b24"
-set -g @theme_brightred "#f4153b"
-set -g @theme_green "#6bbe6c"
-set -g @theme_yellow "#a57705"
-set -g @theme_blue "#2075c7"
-set -g @theme_magenta "#c61b6e"
-set -g @theme_cyan "#259185"
+set -g @theme_bg "#121212"
+set -g @theme_fg "#c9b9a8"
+set -g @theme_accent "#7293a8"
+set -g @theme_gray "#4a4541"
+set -g @theme_highlight "#d4896b"
+set -g @theme_red "#c15959"
+set -g @theme_brightred "#d47065"
+set -g @theme_green "#d4896b"
+set -g @theme_yellow "#d9a364"
+set -g @theme_blue "#7293a8"
+set -g @theme_magenta "#b5746b"
+set -g @theme_cyan "#7fa09e"
 
 # ============================================================================
 # Tmux color settings
 # ============================================================================
-set -g status-style "bg=#002b36,fg=#9bc1c2"
-set -g message-style "bg=#002b36,fg=#2075c7"
-set -g message-command-style "bg=#002b36,fg=#2075c7"
-set -g pane-border-style "fg=#006388"
-set -g pane-active-border-style "fg=#2075c7"
-set -g window-status-style "fg=#006388"
-set -g window-status-current-style "fg=#2075c7,bold"
-set -g mode-style "bg=#2075c7,fg=#002b36"
-set -g clock-mode-colour "#2075c7"
+set -g status-style "bg=#121212,fg=#c9b9a8"
+set -g message-style "bg=#121212,fg=#7293a8"
+set -g message-command-style "bg=#121212,fg=#7293a8"
+set -g pane-border-style "fg=#4a4541"
+set -g pane-active-border-style "fg=#d4896b"
+set -g window-status-style "fg=#4a4541"
+set -g window-status-current-style "fg=#7293a8,bold"
+set -g mode-style "bg=#7293a8,fg=#121212"
+set -g clock-mode-colour "#7293a8"
