--- a/cava/.config/cava/config
+++ b/cava/.config/cava/config
@@ -5,12 +5,12 @@ source = /tmp/mpd.fifo
 [color]
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#eb6f92'
-gradient_color_2 = '#31748f'
-gradient_color_3 = '#f6c177'
-gradient_color_4 = '#9ccfd8'
-gradient_color_5 = '#c4a7e7'
-gradient_color_6 = '#ebbcba'
-gradient_color_7 = '#c4a7e7'
-gradient_color_8 = '#ebbcba'
+gradient_color_1 = '#c15959'
+gradient_color_2 = '#d4896b'
+gradient_color_3 = '#d9a364'
+gradient_color_4 = '#7293a8'
+gradient_color_5 = '#b5746b'
+gradient_color_6 = '#7fa09e'
+gradient_color_7 = '#c98b82'
+gradient_color_8 = '#93b4b2'
 
