--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,31 +1,30 @@
 
-$GTK_THEME = Rose-Pine
-$ICON_THEME = Tela-circle-pink
-$COLOR_SCHEME = prefer-dark
-$NVIM_SCHEME = rose-pine
-$NVIM_VARIANT = main
+$SDDM_THEME = Red-Stone
+$GTK_THEME = Red-Stone
+$ICON_THEME = Tela-circle-red
+$CURSOR_THEME=Mocu-Black-Right
+$CURSOR_SIZE=25
+$COLOR_SCHEME=prefer-dark
+$NVIM_SCHEME = ashen
 $NVIM_BACKGROUND = dark
 $NVIM_TRANSPARENCY = false
 
-# Optional: The varibles above will be set automatically when the theme is loaded
-# This exec commands will soon be deprecated
-
 
 general {
-    gaps_in = 3
-    gaps_out = 6
+    gaps_in = 2
+    gaps_out = 4
     border_size = 2
-    col.active_border = rgba(eb6f92ff)
-    col.inactive_border = rgba(31748fcc)
+    col.active_border = rgba(B41211ff)
+    col.inactive_border = rgba(3d3935ff)
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(eb6f92ff)
-    col.border_inactive = rgba(31748fcc)
-    col.border_locked_active = rgba(eb6f92ff)
-    col.border_locked_inactive = rgba(31748fcc)
+    col.border_active = rgba(B41211ff)
+    col.border_inactive = rgba(3d3935cc)
+    col.border_locked_active = rgba(FFFFFFff)
+    col.border_locked_inactive = rgba(FFFFFFcc)
 }
 
 decoration {
@@ -33,12 +32,18 @@ decoration {
 
     blur {
         enabled = yes
-        size = 6
-        passes = 3
+        size = 4
+        passes = 2
         new_optimizations = on
         ignore_opacity = on
         xray = false
     }
+    shadow {
+        enabled = false
+    }
 }
 
 layerrule = blur,waybar
+layerrule = ignorezero,waybar
+
+
