--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -124,52 +124,52 @@ windowrulev2 = noinitialfocus,class:^(.*jetbrains.*)$,title:^(win[0-9]+)$
 # TUI application window rules
 
 # LazyGit - Git TUI
-windowrule = float, class:org.tui.LazyGit
-windowrule = center, class:org.tui.LazyGit
-windowrule = size 1400 900, class:org.tui.LazyGit
+windowrulev2 = float, class:org.tui.LazyGit
+windowrulev2 = center, class:org.tui.LazyGit
+windowrulev2 = size 1400 900, class:org.tui.LazyGit
 
 # LazyDocker - Docker TUI
-windowrule = float, class:org.tui.LazyDocker
-windowrule = center, class:org.tui.LazyDocker
-windowrule = size 1400 900, class:org.tui.LazyDocker
+windowrulev2 = float, class:org.tui.LazyDocker
+windowrulev2 = center, class:org.tui.LazyDocker
+windowrulev2 = size 1400 900, class:org.tui.LazyDocker
 
 # Wiremix - Audio mixer TUI
-windowrule = float, class:org.tui.Wiremix
-windowrule = center, class:org.tui.Wiremix
-windowrule = size 800 600, class:org.tui.Wiremix
+windowrulev2 = float, class:org.tui.Wiremix
+windowrulev2 = center, class:org.tui.Wiremix
+windowrulev2 = size 800 600, class:org.tui.Wiremix
 
 # Impala - WiFi manager TUI
-windowrule = float, class:org.tui.Impala
-windowrule = center, class:org.tui.Impala
-windowrule = size 800 600, class:org.tui.Impala
+windowrulev2 = float, class:org.tui.Impala
+windowrulev2 = center, class:org.tui.Impala
+windowrulev2 = size 800 600, class:org.tui.Impala
 
 # Ranger - File manager TUI
-windowrule = float, class:org.tui.Ranger
-windowrule = center, class:org.tui.Ranger
-windowrule = size 1200 800, class:org.tui.Ranger
+windowrulev2 = float, class:org.tui.Ranger
+windowrulev2 = center, class:org.tui.Ranger
+windowrulev2 = size 1200 800, class:org.tui.Ranger
 
 # Bottom - System monitor TUI
-windowrule = float, class:org.tui.Bottom
-windowrule = center, class:org.tui.Bottom
-windowrule = size 1400 900, class:org.tui.Bottom
+windowrulev2 = float, class:org.tui.Bottom
+windowrulev2 = center, class:org.tui.Bottom
+windowrulev2 = size 1400 900, class:org.tui.Bottom
 
 # Rmpc - MPD music player client TUI
-windowrule = float, class:org.tui.Rmpc
-windowrule = center, class:org.tui.Rmpc
-windowrule = size 1200 700, class:org.tui.Rmpc
+windowrulev2 = float, class:org.tui.Rmpc
+windowrulev2 = center, class:org.tui.Rmpc
+windowrulev2 = size 1200 700, class:org.tui.Rmpc
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
-layerrule = blur,notifications
-layerrule = ignorezero,notifications
+layerrulev2 = blur,rofi
+layerrulev2 = ignorezero,rofi
+layerrulev2 = blur,notifications
+layerrulev2 = ignorezero,notifications
 # layerrule = blur,swaync-notification-window
 # layerrule = ignorezero,swaync-notification-window
-layerrule = blur,swaync-control-center
-layerrule = ignorezero,swaync-control-center
-layerrule = blur,logout_dialog
+layerrulev2 = blur,swaync-control-center
+layerrulev2 = ignorezero,swaync-control-center
+layerrulev2 = blur,logout_dialog
 
 # Walker launcher rules
 windowrulev2 = float, class:^(walker)$
