--- a/hypr/.config/hypr/windowrules.conf
+++ b/hypr/.config/hypr/windowrules.conf
@@ -123,16 +123,6 @@ windowrulev2 = noinitialfocus,class:^(.*jetbrains.*)$,title:^(win[0-9]+)$
 
 # TUI application window rules
 
-# LazyGit - Git TUI
-windowrulev2 = float, class:org.tui.LazyGit
-windowrulev2 = center, class:org.tui.LazyGit
-windowrulev2 = size 1400 900, class:org.tui.LazyGit
-
-# LazyDocker - Docker TUI
-windowrulev2 = float, class:org.tui.LazyDocker
-windowrulev2 = center, class:org.tui.LazyDocker
-windowrulev2 = size 1400 900, class:org.tui.LazyDocker
-
 # Wiremix - Audio mixer TUI
 windowrulev2 = float, class:org.tui.Wiremix
 windowrulev2 = center, class:org.tui.Wiremix
@@ -143,20 +133,30 @@ windowrulev2 = float, class:org.tui.Impala
 windowrulev2 = center, class:org.tui.Impala
 windowrulev2 = size 800 600, class:org.tui.Impala
 
-# Ranger - File manager TUI
-windowrulev2 = float, class:org.tui.Ranger
-windowrulev2 = center, class:org.tui.Ranger
-windowrulev2 = size 1200 800, class:org.tui.Ranger
-
 # Bottom - System monitor TUI
 windowrulev2 = float, class:org.tui.Bottom
 windowrulev2 = center, class:org.tui.Bottom
-windowrulev2 = size 1400 900, class:org.tui.Bottom
+windowrulev2 = size 800 600, class:org.tui.Bottom
+
+# Htop - CPU monitor TUI
+windowrulev2 = float, class:org.tui.Htop
+windowrulev2 = center, class:org.tui.Htop
+windowrulev2 = size 800 600, class:org.tui.Htop
+
+# Nvtop - GPU monitor TUI
+windowrulev2 = float, class:org.tui.Nvtop
+windowrulev2 = center, class:org.tui.Nvtop
+windowrulev2 = size 800 600, class:org.tui.Nvtop
+
+# Dua - Disk usage TUI
+windowrulev2 = float, class:org.tui.Dua
+windowrulev2 = center, class:org.tui.Dua
+windowrulev2 = size 800 600, class:org.tui.Dua
 
 # Rmpc - MPD music player client TUI
 windowrulev2 = float, class:org.tui.Rmpc
 windowrulev2 = center, class:org.tui.Rmpc
-windowrulev2 = size 1200 700, class:org.tui.Rmpc
+windowrulev2 = size 800 600, class:org.tui.Rmpc
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
