--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,58 +1,60 @@
-# vim:ft=kitty
+# Oxocarbon theme for Kitty
 
 # The basic colors
+foreground              #ffffff
+background              #161616
+selection_foreground    #161616
+selection_background    #33b1ff
 
-foreground              #979eab
-background              #282c34
-selection_foreground    #282c34
-selection_background    #979eab
-
-# Cursor
-cursor                     none
-cursor_blink_interval      -1
-cursor_stop_blinking_after 15.0
+# Cursor colors
+cursor                  #33b1ff
+cursor_text_color       #161616
 
 # URL underline color when hovering with mouse
-url_color               #c678dd
+url_color               #42be65
 
-active_tab_foreground   #dcdcdc
-active_tab_background   #282c34
+# Kitty window border colors
+active_border_color     #33b1ff
+inactive_border_color   #262626
+bell_border_color       #ffe97b
 
-inactive_tab_foreground #979eab
-inactive_tab_background #1e222a
-
-tab_bar_background #1e222a
+# Tab bar colors
+active_tab_foreground   #33b1ff
+active_tab_background   #161616
+inactive_tab_foreground #393939
+inactive_tab_background #161616
+tab_bar_background      #262626
 
 # The 16 terminal colors
 
 # black
-color0 #282c34
-color8 #393e48
+color0 #262626
+color8 #393939
 
 # red
-color1 #e06c75
-color9 #d77c75
+color1 #ee5396
+color9 #ee5396
 
 # green
-color2  #98c379
-color10 #a8d386
+color2  #42be65
+color10 #42be65
 
 # yellow
-color3  #e5c07b
-color11 #ddc985
+color3  #ffe97b
+color11 #ffe97b
 
 # blue
-color4  #61afef
-color12 #6bb9e5
+color4  #33b1ff
+color12 #33b1ff
 
 # magenta
-color5  #c678dd
-color13 #c691dd
+color5  #ff7eb6
+color13 #ff7eb6
 
 # cyan
-color6  #65b6c2
-color14 #65d2c2
+color6  #3ddbd9
+color14 #3ddbd9
 
 # white
-color7  #979eab
-color15 #abb2bf
+color7  #dde1e6
+color15 #ffffff
