--- a/cava/.config/cava/config
+++ b/cava/.config/cava/config
@@ -5,12 +5,12 @@ source = /tmp/mpd.fifo
 [color]
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#e06c75'
-gradient_color_2 = '#98c379'
-gradient_color_3 = '#e5c07b'
-gradient_color_4 = '#61afef'
-gradient_color_5 = '#c678dd'
-gradient_color_6 = '#65b6c2'
-gradient_color_7 = '#c691dd'
-gradient_color_8 = '#65d2c2'
+gradient_color_1 = '#ee5396'
+gradient_color_2 = '#42be65'
+gradient_color_3 = '#ffe97b'
+gradient_color_4 = '#33b1ff'
+gradient_color_5 = '#ff7eb6'
+gradient_color_6 = '#3ddbd9'
+gradient_color_7 = '#ff7eb6'
+gradient_color_8 = '#3ddbd9'
 
