--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,35 +1,34 @@
 
+$GTK_THEME = Oxo-Carbon
+$ICON_THEME = Tela-circle-pink
+$COLOR_SCHEME=prefer-dark
 $CURSOR_THEME = Capitaine-Cursors
 $CURSOR_SIZE=24
-$GTK_THEME = One-Dark
-$ICON_THEME = One-Dark
-$COLOR_SCHEME = prefer-dark
-$NVIM_SCHEME = onedark
-$NVIM_VARIANT = dark
+$CODE_THEME=oxocarbon
+$NVIM_SCHEME = oxocarbon
 $NVIM_BACKGROUND = dark
 $NVIM_TRANSPARENCY = false
 
 
-
 general {
     gaps_in = 3
-    gaps_out = 7
+    gaps_out = 6
     border_size = 2
-    col.active_border = rgba(98c379ff)
-    col.inactive_border = rgba(614D85cc)
+    col.active_border = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
+    col.inactive_border = rgba(31748fcc) rgba(9ccfd8cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(03edf9ff) rgba(72f1b8ff) 45deg
-    col.border_inactive = rgba(614D85cc) 
-    col.border_locked_active = rgba(03edf9ff) rgba(72f1b8ff) 45deg
-    col.border_locked_inactive = rgba(614D85cc) 
+    col.border_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
+    col.border_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
+    col.border_locked_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
+    col.border_locked_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
 }
 
 decoration {
-    rounding = 2
+    rounding = 4
 
     blur {
         enabled = yes
@@ -39,6 +38,10 @@ decoration {
         ignore_opacity = on
         xray = false
     }
+
+    shadow {
+        enabled = false
+    }
 }
 
-blurls = waybar
+layerrule = blur,waybar
