--- a/tmux/.config/tmux/theme.conf
+++ b/tmux/.config/tmux/theme.conf
@@ -1,52 +1,52 @@
 
-# Tmux theme for One Dark
+# Tmux theme for Oxo Carbon
 # Auto-generated from kitty.theme colors
 
 # ============================================================================
 # Standard 16 color palette
 # ============================================================================
-set -g @color0 "#282c34"
-set -g @color1 "#e06c75"
-set -g @color2 "#98c379"
-set -g @color3 "#e5c07b"
-set -g @color4 "#61afef"
-set -g @color5 "#c678dd"
-set -g @color6 "#65b6c2"
-set -g @color7 "#979eab"
-set -g @color8 "#393e48"
-set -g @color9 "#d77c75"
-set -g @color10 "#a8d386"
-set -g @color11 "#ddc985"
-set -g @color12 "#6bb9e5"
-set -g @color13 "#c691dd"
-set -g @color14 "#65d2c2"
-set -g @color15 "#abb2bf"
+set -g @color0 "#262626"
+set -g @color1 "#ee5396"
+set -g @color2 "#42be65"
+set -g @color3 "#ffe97b"
+set -g @color4 "#33b1ff"
+set -g @color5 "#ff7eb6"
+set -g @color6 "#3ddbd9"
+set -g @color7 "#dde1e6"
+set -g @color8 "#393939"
+set -g @color9 "#ee5396"
+set -g @color10 "#42be65"
+set -g @color11 "#ffe97b"
+set -g @color12 "#33b1ff"
+set -g @color13 "#ff7eb6"
+set -g @color14 "#3ddbd9"
+set -g @color15 "#ffffff"
 
 # ============================================================================
 # Semantic color aliases
 # ============================================================================
-set -g @theme_bg "#282c34"
-set -g @theme_fg "#979eab"
-set -g @theme_accent "#61afef"
-set -g @theme_gray "#393e48"
-set -g @theme_highlight "#61afef"
-set -g @theme_red "#e06c75"
-set -g @theme_brightred "#d77c75"
-set -g @theme_green "#98c379"
-set -g @theme_yellow "#e5c07b"
-set -g @theme_blue "#61afef"
-set -g @theme_magenta "#c678dd"
-set -g @theme_cyan "#65b6c2"
+set -g @theme_bg "#161616"
+set -g @theme_fg "#ffffff"
+set -g @theme_accent "#33b1ff"
+set -g @theme_gray "#393939"
+set -g @theme_highlight "#33b1ff"
+set -g @theme_red "#ee5396"
+set -g @theme_brightred "#ee5396"
+set -g @theme_green "#42be65"
+set -g @theme_yellow "#ffe97b"
+set -g @theme_blue "#33b1ff"
+set -g @theme_magenta "#ff7eb6"
+set -g @theme_cyan "#3ddbd9"
 
 # ============================================================================
 # Tmux color settings
 # ============================================================================
-set -g status-style "bg=#282c34,fg=#979eab"
-set -g message-style "bg=#282c34,fg=#61afef"
-set -g message-command-style "bg=#282c34,fg=#61afef"
-set -g pane-border-style "fg=#393e48"
-set -g pane-active-border-style "fg=#61afef"
-set -g window-status-style "fg=#393e48"
-set -g window-status-current-style "fg=#61afef,bold"
-set -g mode-style "bg=#61afef,fg=#282c34"
-set -g clock-mode-colour "#61afef"
+set -g status-style "bg=#161616,fg=#ffffff"
+set -g message-style "bg=#161616,fg=#33b1ff"
+set -g message-command-style "bg=#161616,fg=#33b1ff"
+set -g pane-border-style "fg=#393939"
+set -g pane-active-border-style "fg=#33b1ff"
+set -g window-status-style "fg=#393939"
+set -g window-status-current-style "fg=#33b1ff,bold"
+set -g mode-style "bg=#33b1ff,fg=#161616"
+set -g clock-mode-colour "#33b1ff"
