--- a/cava/.config/cava/config
+++ b/cava/.config/cava/config
@@ -5,12 +5,12 @@ source = /tmp/mpd.fifo
 [color]
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#ee5396'
-gradient_color_2 = '#42be65'
-gradient_color_3 = '#ffe97b'
-gradient_color_4 = '#33b1ff'
-gradient_color_5 = '#ff7eb6'
-gradient_color_6 = '#3ddbd9'
-gradient_color_7 = '#ff7eb6'
-gradient_color_8 = '#3ddbd9'
+gradient_color_1 = '#F92672'
+gradient_color_2 = '#A6E3A1'
+gradient_color_3 = '#F9E2AF'
+gradient_color_4 = '#F38D70'
+gradient_color_5 = '#F5C2E7'
+gradient_color_6 = '#94E2D5'
+gradient_color_7 = '#F5C2E7'
+gradient_color_8 = '#94E2D5'
 
