--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,47 +1,59 @@
 
-$GTK_THEME = Oxo-Carbon
-$ICON_THEME = Tela-circle-pink
+# $SDDM_THEME = Monokai
+$GTK_THEME = Monokai
+$ICON_THEME = Monokai
 $COLOR_SCHEME=prefer-dark
-$CURSOR_THEME = Capitaine-Cursors
-$CURSOR_SIZE=24
-$CODE_THEME=oxocarbon
-$NVIM_SCHEME = oxocarbon
+$NVIM_SCHEME = monokai-pro
+$NVIM_VARIANT = ristretto 
 $NVIM_BACKGROUND = dark
 $NVIM_TRANSPARENCY = false
+
+$CURSOR_THEME=Sweet-cursors
+$CURSOR_SIZE=24
 
 
 general {
     gaps_in = 3
     gaps_out = 6
     border_size = 2
-    col.active_border = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
-    col.inactive_border = rgba(31748fcc) rgba(9ccfd8cc) 45deg
+    col.active_border = rgba(ca9ee6ff)
+    col.inactive_border = rgba(b4befecc)
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
-    col.border_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
-    col.border_locked_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
-    col.border_locked_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
+    col.border_active = rgba(ca9ee6ff)
+    col.border_inactive = rgba(b4befecc)
+    col.border_locked_active = rgba(ca9ee6ff)
+    col.border_locked_inactive = rgba(b4befecc)
 }
 
 decoration {
     rounding = 4
 
     blur {
-        enabled = yes
-        size = 6
+        enabled = true
+        size = 4
         passes = 3
         new_optimizations = on
-        ignore_opacity = on
+        ignore_opacity = true
         xray = false
+        brightness = 1
+        noise=0.04
     }
-
     shadow {
         enabled = false
     }
+    
 }
 
-layerrule = blur,waybar
+#windowrule=opacity 1 override 1 override,title:(.*)
+windowrulev2 = opacity 0.80 0.70,class:^(pavucontrol)$
+windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
+windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
+windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
+windowrulev2 = opacity 0.70 0.70,class:^(kitty)$
+windowrulev2 = opacity 0.80 0.70,class:^(dev.warp.Warp)$
+layerrule = blur,waybar 
+layerrule = blur,rofi 
