--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,60 +1,76 @@
-# Oxocarbon theme for Kitty
+
+# dull black
+color0 #403838
+# light black
+color8 #72696a
 
 # The basic colors
-foreground              #ffffff
-background              #161616
-selection_foreground    #161616
-selection_background    #33b1ff
+foreground              #F8F8F2
+background              #2C2525
+selection_foreground    #2C2525
+selection_background    #F8F8F2
 
 # Cursor colors
-cursor                  #33b1ff
-cursor_text_color       #161616
+cursor                  #F8F8F2
+cursor_text_color       #2d2a2e
 
 # URL underline color when hovering with mouse
-url_color               #42be65
+url_color               #F92672
 
 # Kitty window border colors
-active_border_color     #33b1ff
-inactive_border_color   #262626
-bell_border_color       #ffe97b
+active_border_color     #F92672
+inactive_border_color   #A6E3A1
+bell_border_color       #F38BA8
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #33b1ff
-active_tab_background   #161616
-inactive_tab_foreground #393939
-inactive_tab_background #161616
-tab_bar_background      #262626
+active_tab_foreground   #87B0F9
+active_tab_background   #272822
+inactive_tab_foreground #807d74
+inactive_tab_background #272822
+tab_bar_background      #403838
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #F8F8F2
+mark1_background #F92672
+mark2_foreground #F8F8F2
+mark2_background #A6E3A1
+mark3_foreground #F8F8F2
+mark3_background #87B0F9
 
 # The 16 terminal colors
 
 # black
-color0 #262626
-color8 #393939
+color0 #272822
+color8 #807d74
 
 # red
-color1 #ee5396
-color9 #ee5396
+color1 #F92672
+color9 #F92672
 
 # green
-color2  #42be65
-color10 #42be65
+color2  #A6E3A1
+color10 #A6E3A1
 
 # yellow
-color3  #ffe97b
-color11 #ffe97b
+color3  #F9E2AF
+color11 #F9E2AF
 
 # blue
-color4  #33b1ff
-color12 #33b1ff
+color4  #F38D70
+color12 #F38D70
 
 # magenta
-color5  #ff7eb6
-color13 #ff7eb6
+color5  #F5C2E7
+color13 #F5C2E7
 
 # cyan
-color6  #3ddbd9
-color14 #3ddbd9
+color6  #94E2D5
+color14 #94E2D5
 
 # white
-color7  #dde1e6
-color15 #ffffff
+color7  #F8F8F2
+color15 #F8F8F2
