--- a/hypr/.config/hypr/themes/theme.conf
+++ b/hypr/.config/hypr/themes/theme.conf
@@ -1,59 +1,38 @@
 
-# $SDDM_THEME = Monokai
-$GTK_THEME = Monokai
-$ICON_THEME = Monokai
-$COLOR_SCHEME=prefer-dark
-$NVIM_SCHEME = monokai-pro
-$NVIM_VARIANT = ristretto 
-$NVIM_BACKGROUND = dark
-$NVIM_TRANSPARENCY = false
-
+$GTK_THEME=Kripton
+$ICON_THEME=Vivid-Glassy-Dark-Icons
+# $ICON_THEME=Fluent-green
 $CURSOR_THEME=Sweet-cursors
 $CURSOR_SIZE=24
+$COLOR_SCHEME=prefer-dark
+$NVIM_SCHEME=nord
+$NVIM_BACKGROUND = dark
+$NVIM_TRANSPARENCY = false
 
 
 general {
     gaps_in = 3
     gaps_out = 6
     border_size = 2
-    col.active_border = rgba(ca9ee6ff)
-    col.inactive_border = rgba(b4befecc)
+    col.active_border = rgba(78c6ebff)
+    col.inactive_border = rgba(7, 15, 42, 0.58)
     layout = dwindle
     resize_on_border = true
 }
 
-group {
-    col.border_active = rgba(ca9ee6ff)
-    col.border_inactive = rgba(b4befecc)
-    col.border_locked_active = rgba(ca9ee6ff)
-    col.border_locked_inactive = rgba(b4befecc)
-}
-
 decoration {
-    rounding = 4
+    rounding = 2
 
     blur {
-        enabled = true
+        enabled = yes
         size = 4
-        passes = 3
+        passes = 2
         new_optimizations = on
-        ignore_opacity = true
+        ignore_opacity = on
         xray = false
-        brightness = 1
-        noise=0.04
     }
-    shadow {
-        enabled = false
-    }
-    
 }
 
-#windowrule=opacity 1 override 1 override,title:(.*)
-windowrulev2 = opacity 0.80 0.70,class:^(pavucontrol)$
-windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
-windowrulev2 = opacity 0.70 0.70,class:^(kitty)$
-windowrulev2 = opacity 0.80 0.70,class:^(dev.warp.Warp)$
-layerrule = blur,waybar 
-layerrule = blur,rofi 
+blurls = waybar
+
+
