--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,76 +1,39 @@
 
-# dull black
-color0 #403838
-# light black
-color8 #72696a
+active_tab_foreground #78C6EB
+active_tab_background #1f1f28
+inactive_tab_foreground #727169
+inactive_tab_foreground #3B4252
+inactive_tab_background #1f1f28
+tab_bar_background #1f1f33
 
-# The basic colors
-foreground              #F8F8F2
-background              #2C2525
-selection_foreground    #2C2525
-selection_background    #F8F8F2
+background #2E3440
+foreground #eceffd
 
-# Cursor colors
-cursor                  #F8F8F2
-cursor_text_color       #2d2a2e
+cursor #78C6EB
 
-# URL underline color when hovering with mouse
-url_color               #F92672
+selection_foreground #222436
+selection_background #fcf6e8
 
-# Kitty window border colors
-active_border_color     #F92672
-inactive_border_color   #A6E3A1
-bell_border_color       #F38BA8
+color0 #03063c
+color8 #6c5a30
 
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+color1 #40E0D0
+color9 #d94a8a
 
-# Tab bar colors
-active_tab_foreground   #87B0F9
-active_tab_background   #272822
-inactive_tab_foreground #807d74
-inactive_tab_background #272822
-tab_bar_background      #403838
+color2 #abf157
+color10 #daffa8
 
-# Colors for marks (marked text in the terminal)
-mark1_foreground #F8F8F2
-mark1_background #F92672
-mark2_foreground #F8F8F2
-mark2_background #A6E3A1
-mark3_foreground #F8F8F2
-mark3_background #87B0F9
+color3 #fdcd5e
+color11 #fee6a8
 
-# The 16 terminal colors
+color4 #78C6EB
+color12 #b1bdf9
 
-# black
-color0 #272822
-color8 #807d74
+color5 #DE3163
+color13 #fda4cc
 
-# red
-color1 #F92672
-color9 #F92672
+color6 #78C6EB
+color14 #a4bc86
 
-# green
-color2  #A6E3A1
-color10 #A6E3A1
-
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
-
-# blue
-color4  #F38D70
-color12 #F38D70
-
-# magenta
-color5  #F5C2E7
-color13 #F5C2E7
-
-# cyan
-color6  #94E2D5
-color14 #94E2D5
-
-# white
-color7  #F8F8F2
-color15 #F8F8F2
+color7 #f8f9f9
+color15 #f6ffec
