--- a/cava/.config/cava/config
+++ b/cava/.config/cava/config
@@ -5,12 +5,12 @@ source = /tmp/mpd.fifo
 [color]
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#F92672'
-gradient_color_2 = '#A6E3A1'
-gradient_color_3 = '#F9E2AF'
-gradient_color_4 = '#F38D70'
-gradient_color_5 = '#F5C2E7'
-gradient_color_6 = '#94E2D5'
-gradient_color_7 = '#F5C2E7'
-gradient_color_8 = '#94E2D5'
+gradient_color_1 = '#40E0D0'
+gradient_color_2 = '#abf157'
+gradient_color_3 = '#fdcd5e'
+gradient_color_4 = '#78C6EB'
+gradient_color_5 = '#DE3163'
+gradient_color_6 = '#78C6EB'
+gradient_color_7 = '#fda4cc'
+gradient_color_8 = '#a4bc86'
 
