--- a/tmux/.config/tmux/theme.conf
+++ b/tmux/.config/tmux/theme.conf
@@ -1,52 +1,52 @@
 
-# Tmux theme for Monokai
+# Tmux theme for Another World
 # Auto-generated from kitty.theme colors
 
 # ============================================================================
 # Standard 16 color palette
 # ============================================================================
-set -g @color0 "#272822"
-set -g @color1 "#F92672"
-set -g @color2 "#A6E3A1"
-set -g @color3 "#F9E2AF"
-set -g @color4 "#F38D70"
-set -g @color5 "#F5C2E7"
-set -g @color6 "#94E2D5"
-set -g @color7 "#F8F8F2"
-set -g @color8 "#807d74"
-set -g @color9 "#F92672"
-set -g @color10 "#A6E3A1"
-set -g @color11 "#F9E2AF"
-set -g @color12 "#F38D70"
-set -g @color13 "#F5C2E7"
-set -g @color14 "#94E2D5"
-set -g @color15 "#F8F8F2"
+set -g @color0 "#03063c"
+set -g @color1 "#40E0D0"
+set -g @color2 "#abf157"
+set -g @color3 "#fdcd5e"
+set -g @color4 "#78C6EB"
+set -g @color5 "#DE3163"
+set -g @color6 "#78C6EB"
+set -g @color7 "#f8f9f9"
+set -g @color8 "#6c5a30"
+set -g @color9 "#d94a8a"
+set -g @color10 "#daffa8"
+set -g @color11 "#fee6a8"
+set -g @color12 "#b1bdf9"
+set -g @color13 "#fda4cc"
+set -g @color14 "#a4bc86"
+set -g @color15 "#f6ffec"
 
 # ============================================================================
 # Semantic color aliases
 # ============================================================================
-set -g @theme_bg "#2C2525"
-set -g @theme_fg "#F8F8F2"
-set -g @theme_accent "#F38D70"
-set -g @theme_gray "#807d74"
-set -g @theme_highlight "#F92672"
-set -g @theme_red "#F92672"
-set -g @theme_brightred "#F92672"
-set -g @theme_green "#A6E3A1"
-set -g @theme_yellow "#F9E2AF"
-set -g @theme_blue "#F38D70"
-set -g @theme_magenta "#F5C2E7"
-set -g @theme_cyan "#94E2D5"
+set -g @theme_bg "#2E3440"
+set -g @theme_fg "#eceffd"
+set -g @theme_accent "#78C6EB"
+set -g @theme_gray "#6c5a30"
+set -g @theme_highlight "#78C6EB"
+set -g @theme_red "#40E0D0"
+set -g @theme_brightred "#d94a8a"
+set -g @theme_green "#abf157"
+set -g @theme_yellow "#fdcd5e"
+set -g @theme_blue "#78C6EB"
+set -g @theme_magenta "#DE3163"
+set -g @theme_cyan "#78C6EB"
 
 # ============================================================================
 # Tmux color settings
 # ============================================================================
-set -g status-style "bg=#2C2525,fg=#F8F8F2"
-set -g message-style "bg=#2C2525,fg=#F38D70"
-set -g message-command-style "bg=#2C2525,fg=#F38D70"
-set -g pane-border-style "fg=#807d74"
-set -g pane-active-border-style "fg=#F92672"
-set -g window-status-style "fg=#807d74"
-set -g window-status-current-style "fg=#F38D70,bold"
-set -g mode-style "bg=#F38D70,fg=#2C2525"
-set -g clock-mode-colour "#F38D70"
+set -g status-style "bg=#2E3440,fg=#eceffd"
+set -g message-style "bg=#2E3440,fg=#78C6EB"
+set -g message-command-style "bg=#2E3440,fg=#78C6EB"
+set -g pane-border-style "fg=#6c5a30"
+set -g pane-active-border-style "fg=#78C6EB"
+set -g window-status-style "fg=#6c5a30"
+set -g window-status-current-style "fg=#78C6EB,bold"
+set -g mode-style "bg=#78C6EB,fg=#2E3440"
+set -g clock-mode-colour "#78C6EB"
