--- a/hypr/.config/hypr/shaders.conf
+++ b/hypr/.config/hypr/shaders.conf
@@ -16,8 +16,7 @@
 # name of the shader
 $SCREEN_SHADER = "disable"
 # path to the shader
-$SCREEN_SHADER_PATH = "/home/rifle/.config/hypr/shaders/disable.frag"
+$SCREEN_SHADER_PATH = "$XDG_CONFIG_HOME/hypr/shaders/disable.frag"
 # path to the compiled shader // override this in '../hypr/config.toml'
-$SCREEN_SHADER_COMPILED = /home/rifle/.config/hypr/shaders/.compiled.cache.glsl
-
+$SCREEN_SHADER_COMPILED = "$XDG_CONFIG_HOME/hypr/shaders/.compiled.cache.glsl"
 
